# pytest-test-suite-minimizer-z3

./: .coverage  .gitignore  LICENSE  MANIFEST.in  PUBLISHING.md  README.md  main.py  publish.sh  pyproject.toml  pytest.ini  run_tests.sh  test.sh
.github/workflows/: ci.yml  publish.yml
example/app/: interpreter.py  typechecker.py
example/tests/: test_interpreter.py  test_typechecker.py
issues/: implement-side-by-side-translation-of-pytest-plugin-to-c.md
pytest_test_suite_minimizer_z3/: __init__.py  analyse.py  analyzer.py  plugin.py  z3_mock.py
tests/: __init__.py  conftest.py  test_analyzer.py  test_integration.py  test_plugin.py  test_z3_mock.py
