[project]
name = "pytest-test-suite-minimizer-z3"
version = "0.1.0"
description = "A pytest plugin that uses Z3 theorem prover to minimize test suites while maintaining coverage"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "coverage>=7.10.6",
    "pytest>=8.4.2",
    "pytest-cov>=6.3.0",
    "z3-solver>=4.15.3.0",
]

[tool.setuptools]
packages = ["pytest_test_suite_minimizer_z3"]

[project.entry-points.pytest11]
test_suite_minimizer_z3 = "pytest_test_suite_minimizer_z3.plugin"
